move from mxSamplerConsole to console
git-svn-id: https://svn.exedio.com/cope/mxsampler/trunk@25185 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -62,7 +62,7 @@
 		<url-pattern>/cronjob/*</url-pattern>
 	</servlet-mapping>
 	<servlet>
-		<servlet-name>mxSamplerConsole</servlet-name>
+		<servlet-name>console</servlet-name>
 		<servlet-class>com.exedio.cope.console.ConsoleServlet</servlet-class>
 		<init-param>
 			<param-name>model</param-name>
@@ -70,8 +70,8 @@
 		</init-param>
 	</servlet>
 	<servlet-mapping>
-		<servlet-name>mxSamplerConsole</servlet-name>
-		<url-pattern>/mxSamplerConsole/*</url-pattern>
+		<servlet-name>console</servlet-name>
+		<url-pattern>/console/*</url-pattern>
 	</servlet-mapping>
 	<filter>
 		<filter-name>admin-csrf</filter-name>
