--- a/ivy.xml
+++ b/ivy.xml
@@ -16,9 +16,12 @@
 		<dependency org="ant-contrib" name="ant-contrib" rev="1.0b3">
 			<exclude org="ant" module="ant" />
 		</dependency>
+		<dependency org="junit" name="junit" rev="4.9" conf="default->default,sources">
+			<exclude org="org.hamcrest" module="hamcrest-core" />
+		</dependency>
 		<dependency org="org.slf4j" name="slf4j-log4j12" rev="1.6.4" conf="default->default,sources" />
-		<dependency org="com.exedio" name="cope" rev="7604" conf="default->hsqldb,mysql,sources" />
-		<dependency org="com.exedio" name="copeutil" rev="288" />
+		<dependency org="com.exedio" name="cope" rev="7604" conf="default->hsqldb,mysql,junit,sources" />
+		<dependency org="com.exedio" name="copeutil" rev="312" />
 		<dependency org="com.exedio" name="copeservletutil" rev="31" />
 		<dependency org="com.exedio" name="jspm" rev="90" />
 		<dependency org="com.exedio" name="copeconsole" rev="6460" />
