--- a/project.properties
+++ b/project.properties
@@ -23,6 +23,20 @@ tomcat.mxSampler.cope.connection.url=jdbc:hsqldb:mem:copedemoMxSampler
 tomcat.mxSampler.cope.connection.username=sa
 tomcat.mxSampler.cope.connection.password=
 
+# The test class of junit tests.
+#
+test=com.exedio.mxsampler.PackageTest
+
+# Application Properties for unit tests
+#
+test.contextPath=/testContextPath
+test.mail.from=copedemo@exedio.invalid
+test.errorMail.to=copedemo@exedio.invalid
+test.smtp.host=mail.exedio.invalid
+test.mxSampler.cope.connection.url=jdbc:hsqldb:mem:copedemoMxSamplerTest
+test.mxSampler.cope.connection.username=sa
+test.mxSampler.cope.connection.password=
+
 
 # Switches output format of findbugs between html (human readable,
 # the default) and xml (for statistics)
