--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="featuresrc"/>
+	<classpathentry kind="src" path="testsrc"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="lib/servlet-api.jar" sourcepath="lib/servlet-api-source.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
@@ -18,5 +19,7 @@
 	<classpathentry kind="lib" path="lib/slf4j-log4j12.jar" sourcepath="lib/slf4j-log4j12-source.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-api.jar" sourcepath="lib/slf4j-api-source.jar"/>
 	<classpathentry kind="lib" path="lib/exedio-cope-servletutil.jar" sourcepath="lib/exedio-cope-servletutil-src.zip"/>
+	<classpathentry kind="lib" path="lib/junit.jar" sourcepath="lib/junit-source.jar"/>
+	<classpathentry kind="lib" path="lib/exedio-cope-junit.jar" sourcepath="lib/exedio-cope-src.zip"/>
 	<classpathentry kind="output" path=".eclipse-output"/>
 </classpath>
