import all macros

--- a/build.xml
+++ b/build.xml
@@ -5,9 +5,11 @@
 	<property file="local.properties" />
 	<property file="project.properties" />
 	
-	<import file="macros/compile.xml" />
-	<import file="macros/findbugs.xml" />
-	<import file="macros/properties.xml" />
+	<import>
+		<fileset dir="macros">
+			<include name="*.xml" />
+		</fileset>
+	</import>
 	
 	<taskdef resource="com/exedio/jspm/ant.properties" classpath="lib/exedio-jspm.jar" />
 	
