add prerequisites for jenkins plot data plugin - for plotting size of war file
copied from copedemo

--- a/build.xml
+++ b/build.xml
@@ -147,6 +147,7 @@
 			</fileset>
 			<zipfileset dir="build" includes="web4war.xml" fullpath="WEB-INF/web.xml" />
 		</zip>
+		<plot file="build/${webapp}.war" />
 	</target>
 
 	<target name="catalina">
