--- a/ivy.xml
+++ b/ivy.xml
@@ -19,7 +19,8 @@
 		<dependency org="junit" name="junit" rev="4.9" conf="default->default,sources">
 			<exclude org="org.hamcrest" module="hamcrest-core" />
 		</dependency>
-		<dependency org="org.slf4j" name="slf4j-log4j12" rev="1.6.4" conf="default->default,sources" />
+		<dependency org="org.slf4j" name="slf4j-api" rev="1.6.4" conf="default->default" />
+		<dependency org="ch.qos.logback" name="logback-classic" rev="1.1.3" conf="default->default" />
 		<dependency org="com.exedio" name="cope" rev="9718" conf="default->hsqldb,mysql,instrument,sources,changelog" />
 		<dependency org="com.exedio" name="copeutil" rev="312" conf="default->runtime,sources,changelog" />
 		<dependency org="com.exedio" name="copeservletutil" rev="31" conf="default->runtime,sources,changelog" />
