--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -89,6 +89,14 @@
 		<filter-name>admin-csrf</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	<servlet>
+		<servlet-name>logback</servlet-name>
+		<servlet-class>ch.qos.logback.classic.ViewStatusMessagesServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>logback</servlet-name>
+		<url-pattern>/logback</url-pattern>
+	</servlet-mapping>
 
 	<session-config>
 		<session-timeout>30<!--minutes--></session-timeout>
