logback: drop sendmail, no longer needed - readd javax.mail, needed for logback SMTPAppender - hint

--- a/ivy.xml
+++ b/ivy.xml
@@ -30,7 +30,7 @@
 			<exclude org="javax.servlet" module="servlet-api" />
 		</dependency>
 		<dependency org="com.exedio" name="cops" rev="267" conf="default->runtime,sources,changelog" />
-		<dependency org="javax.mail" name="mail" rev="1.4" conf="default->default,sources">
+		<dependency org="javax.mail" name="mail" rev="1.4" conf="default->default,sources"><!-- needed for logback SMTPAppender -->
 			<!--
 				activation is included in JDK 1.6,
 				and sendmail requires JDK 1.6,
