update javax.mail to 1.6.0
on startup of tomcat the following message appears in console:
Feb 14, 2018 10:58:28 AM javax.mail.Session loadResource
WARNUNG: expected resource not found: /META-INF/javamail.default.providers
Feb 14, 2018 10:58:28 AM javax.mail.Session loadResource
WARNUNG: expected resource not found: /META-INF/javamail.default.address.map

--- a/build.xml
+++ b/build.xml
@@ -122,7 +122,8 @@
 			<fileset file="lib/trove4j.jar" />
 			<fileset file="lib/exedio-cope-util.jar" />
 			<fileset file="lib/exedio-cope-servletutil.jar" />
-			<fileset file="lib/mail.jar" />
+			<fileset file="lib/mailapi.jar" />
+			<fileset file="lib/smtp.jar" />
 			<fileset file="lib/activation.jar" />
 			<fileset file="lib/exedio-cronjob.jar" />
 			<fileset file="lib/hsqldb.jar" />
