--- a/build.xml
+++ b/build.xml
@@ -2,6 +2,8 @@
 
 <project name="mxsampler" default="build" basedir=".">
 
+	<echo taskname="which ant" message="${ant.version}" />
+	<echo taskname="which java" message="${java.vm.name} ${java.version}" />
 	<property file="local.properties" />
 	<property file="project.properties" />
 
